		pull generic data from spidered links?
		curses interface (show queue/thread status, maybe status of each thread?)
        cpu/mem - dynamic throttling(?)

ToDo
        consolidate '--find' into one function in the modules
            make folder 'files' containing ./<host>_<filename>
            give ability to check for directory

		SSL parsing/testing for Nexpose (XML/2&Simple) and OpenVAS

		'targets' object changeup
            create sqlite db at beginning and work from it (queue only holds a small ID for the task)
		    merge identical targets pulled from all inputs
			make target fields cumulative
			change flist to apply only to CSV
				make flist a user-defined 'starter'
				make cumulative .keys() list
				make "add_rest" t/f value for appending all of the other fields
			sqliteDB - create table of cumulative flist


Done (* = major changes):
    11/4/2013
		fixed: ANNOYANCE - CSV field quotes showing up in Excel
        made a special '401' image for the HTML report for easy identification(?)
        added --proxy <ip:port>, so you can have Zap/Burp/w3af feed creds to the sites
		added a check for crossdomain.xml
        added './<logfolder>/auth_fail.log' - containing all 401's


    10/18/2013
		BUG - EC2 instances - screenshots don't work  -  have worked footprint down to minimum for now


    10/4/2013
        fixed folder deletion when updating/installing phantomjs
        fixed some output inconsistancies
        fixed SSL identification error in NMap parser
        fixed (muted for now) null hostname error
        fixed thread exception where target['url'] is empty (kills thread, causes a continual run)
        shortened HTML parsing error to make them less dominant, added url to msg


    9/25/2013
		catch agraph() errors - now escaping quotes to prevent the current error.  will revisit if different errors occur
		SSL parsing/testing Nessus & Qualys XML


	9/24/2013
	    *code cleanup/optimization
		*Decided to make RAWR a linux-only project.